<resources>
    <string name="logbook">Logbook</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="benchmark">Benchmark</string>
    <string name="about">About</string>
    <string name="copy_workout">Copy workout</string>
    <string name="randomize_grips">Randomize grip order</string>
    <string name="app_name">Grips and Grades</string>
    <string name="workout_description_hint">Optional short description about the workout</string>
    <string name="save_workout_to_database">Save workout to database</string>
    <string name="update_workout_to_database">Update workout to database</string>
    <string name="hangboard_image">Hangboard image</string>
    <string name="time_controls">Settings</string>
    <string name="new_workout">New 5A\nWorkout</string>
    <string name="start_workout">Start</string>
    <string name="workout_history">Logbook</string>
    <string name="repeaters">Repeaters</string>
    <string name="finger_image">Finger image</string>
    <string name="workout_duration">Duration: xxmin</string>
    <string name="pause">Pause</string>
    <string name="workout_progress">Workout progress</string>
    <string name="workout_deatils">Workout details</string>
    <string name="graphs">Graphs</string>
    <string name="show_hidden">Show Hidden</string>
    <string name="show_time_info_matrix">Show time info in workout matrix</string>
    <string name="grip_info">Amount of different grips in a Set</string>
    <string name="hang_info">In Repeaters, how many times to hang a single grip (reps)</string>
    <string name="time_on_info">The actual hang time</string>
    <string name="time_off_info">In Repeaters, the small off (rest) time between hangs (reps)</string>
    <string name="set_info">Amount of times the whole set is repeated</string>
    <string name="rest_info">Rest time between different Grips</string>
    <string name="long_rest_info">Long rest time between Sets</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="save_preferences">Save preferences</string>
    <string name="load_preferences">Load preferences</string>
    <string name="scaled_line_explanation">Scaled Bars scales four important workout variables
        (Intensity, Average Difficulty, Workload, Power) between 0-1. Zero being the minimum value found
    in workouts and one being the maximum. With this information we can observe how increasing one variable affects
    the others. For example increasing Intensity usually decreases Difficulty. However it is possible
    to steadily increase every variable over time if progression is achieved.</string>
    <string-array name="bm1000_benchmarks">
        <item>Test benchmark program and long ass text to see where it goes, goes, goes goes goes goes</item> 
        <item>6,6,7,3,3,150,360</item> 
        <item>1,1,2,2,3,3,4,4,5,5,6,6</item> 
        <item>1,1,2,2,3,3,4,4,5,5,6,6</item> 

        <item>5B Benchmark for repeaters. Only four finger grip</item>
        <item>3,6,7,3,3,150,300</item>
        <item>6,6,3,3,3,6</item>
        <item>1,1,1,1,1,1</item>

        <item>5C Benchmark repeaters for basic grips. Intro to three finger grips</item>
        <item>5,6,7,3,2,150,300</item>
        <item>6,10,6,6,3,10,8,8,8,8</item>
        <item>1,1,1,1,1,1,2,2,3,3</item>

        <item>6A Benchmark repeaters for basic grips</item>
        <item>6,6,7,3,2,150,300</item>
        <item>10,10,6,10,3,10,8,8,5,8,5,8</item>
        <item>1,1,1,1,1,1,2,2,2,2,3,3</item>

        <item>6A+ Benchmark repeaters for basic grips</item>
        <item>6,6,7,3,2,140,300</item>
        <item>10,10,6,10,3,10,5,8,5,8,8,6</item>
        <item>1,1,1,1,1,1,2,2,3,3,3,3</item>

        <item>6B Benchmark repeaters for wide range of grips. Two finger pocket included</item>
        <item>6,6,7,3,2,140,300</item>
        <item>10,10,3,2,5,5,8,10,5,6,7,7</item>
        <item>1,1,1,1,2,2,2,2,3,3,5,5</item>

        <item>6B+ Benchmark repeaters for wide range of grips.</item>
        <item>6,6,7,3,2,130,300</item>
        <item>10,10,3,2,5,5,8,10,5,5,7,7</item>
        <item>1,1,1,1,2,2,2,2,3,3,5,5</item>

        <item>6C Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,130,300</item>
        <item>10,4,10,4,5,12,5,12,7,7,7,6</item>
        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>

        <item>6C+ Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,120,300</item>
        <item>10,4,10,4,5,12,5,12,7,6,7,6</item>
        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>

        <item>7A Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,120,240</item>
        <item>4,4,10,2,10,12,12,12,7,6,7,11</item>
        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>

        <item>7A+ Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,110,240</item>
        <item>4,4,10,2,10,12,12,10,7,6,7,10</item>
        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>

        <item>7B Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,110,240</item>
        <item>4,2,4,4,10,10,10,12,11,7,11,11</item>
        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>

        <item>7B+ Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,100,240</item>
        <item>4,2,4,4,10,10,10,10,11,7,11,11</item>
        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>

        <item>7C Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,100,180</item>
        <item>2,2,10,4,10,4,11,11,5,5,7,7</item>
        <item>1,1,2,2,3,3,4,4,5,5,6,6</item>

        <item>7C+ Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,90,180</item>
        <item>2,2,10,4,10,4,11,11,5,10,7,7</item>
        <item>1,1,2,2,3,3,4,4,5,5,6,6</item>

        <item>8A Benchmark repeaters for wide range of grips</item>
        <item>12,6,7,3,1,90,1</item>
        <item>2,2,2,4,4,4,2,10,4,4,4,10,11,11,11,10,10,10,10,11,7,7,7,6</item>
        <item>1,1,1,1,2,2,2,2,3,3,3,3,4,4,4,4,5,5,5,5,6,6,6,6</item>
        

    </string-array>
    <string-array name="bm2000_benchmarks">
        <item>5B Benchmark for repeaters</item>
        <item>3,6,7,3,3,150,300</item>
        <item>6,6,3,3,3,6</item>
        <item>1,1,1,1,1,1</item>

        <item>5C Benchmark repeaters for basic grips</item>
        <item>5,6,7,3,2,150,300</item>
        <item>6,6,3,3,6,3,10,6,3,10</item>
        <item>1,1,1,1,1,1,1,1,1,1</item>

        <item>6A Benchmark repeaters for basic grips</item>
        <item>6,6,7,3,2,150,300</item>
        <item>10,11,6,15,3,3,6,15,4,6,4,6</item>
        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>

        <item>6A+ Benchmark repeaters for basic grips</item>
        <item>6,6,7,3,2,140,300</item>
        <item>10,11,6,15,3,15,6,15,4,6,4,6</item>
        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>

        <item>6B Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,140,300</item>
        <item>10,11,3,11,6,15,11,3,15,6,4,6</item>
        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>

        <item>6B+ Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,130,300</item>
        <item>10,11,3,11,6,11,11,3,15,6,4,6</item>
        <item>1,1,1,1,1,1,1,1,2,2,3,3</item>

        <item>6C Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,130,300</item>
        <item>11,11,15,11,3,2,6,3,6,15,8,8</item>
        <item>1,1,1,1,1,1,2,2,3,3,5,5</item>

        <item>6C+ Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,120,300</item>
        <item>11,11,15,11,3,2,6,5,6,15,8,8</item>
        <item>1,1,1,1,1,1,2,2,3,3,5,5</item>

        <item>7A Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,120,240</item>
        <item>6,2,15,2,6,15,4,11,8,8,8,9</item>
        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>

        <item>7A+ Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,110,240</item>
        <item>6,2,15,2,6,11,4,11,8,8,8,9</item>
        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>

        <item>7B Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,110,240</item>
        <item>11,2,15,2,5,11,4,11,8,9,8,13</item>
        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>

        <item>7B+ Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,110,240</item>
        <item>11,2,15,2,5,11,5,11,8,9,8,13</item>
        <item>1,1,1,1,2,2,3,3,4,4,5,5</item>

        <item>7C Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,100,180</item>
        <item>2,2,15,11,5,11,9,9,9,13,8,8</item>
        <item>1,1,2,2,3,3,4,4,5,5,6,6</item>

        <item>7C+ Benchmark repeaters for wide range of grips</item>
        <item>6,6,7,3,2,90,180</item>
        <item>2,2,11,11,5,11,9,9,9,13,8,8</item>
        <item>1,1,2,2,3,3,4,4,5,5,6,6</item>

        <item>8A Benchmark repeaters for wide range of grips</item>
        <item>12,6,7,3,1,90,1</item>
        <item>11,11,2,1,15,1,11,2,5,11,11,15,11,11,9,13,14,8,13,13,8,9,7,7</item>
        <item>1,1,1,1,1,1,2,2,2,2,3,3,3,3,4,4,5,5,5,5,6,6,8,8,</item>


        <item>8C Benchmark for repeaters and mastering all grips!</item>
        <item>10,6,7,3,1,80,1</item>
        <item>1,1,5,2,11,2,9,13,14,13,9,9,12,7,12,12,7,7,7,7</item>
        <item>1,1,2,2,3,3,4,4,5,5,6,6,7,7,8,8,9,9,10,10</item>

    </string-array>
    <string-array name="noBenchmarks">
        <item>There are currently no benchmark programs in this hangboard</item>
        <item>6,6,7,3,150,360</item>
        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>
        <item>1,1,1,1,1,1,1,1,1,1,1,1</item>

    </string-array>
    <string-array name="grades">
        <item>5A</item>
        <item>5B</item>
        <item>5C</item>
        <item>6A</item>
        <item>6B</item>
        <item>6C</item>
        <item>7A</item>
        <item>7B</item>
        <item>7C</item>
        <item>8A</item>
        <item>8B</item>
    </string-array>
</resources>