<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:keepScreenOn="true"
    android:orientation="horizontal"
    tools:context="com.finn.laakso.hangboardapp.WorkoutActivity">

    <ImageView
        android:id="@+id/boardImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/hangboard_image"
        android:focusableInTouchMode="true"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rockprodigy" />

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="4dp"
        android:text="xxmin left\n 1. set(1/6)"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.finn.laakso.hangboardapp.PinchZoomImageView
        android:id="@+id/pinchZoomImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/hangboard_image"
        android:visibility="visible"
        app:srcCompat="@drawable/lauta1011" />

    <ImageView
        android:id="@+id/leftHandImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/finger_image" />

    <ImageView
        android:id="@+id/rightHandImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/finger_image" />

    <Chronometer
        android:id="@+id/lapseTimeChrono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="0"
        android:gravity="bottom|end"
        android:paddingBottom="40dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="200sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoTextView" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/gradTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/hangProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:indeterminate="false"
                android:paddingBottom="1dp"
                android:paddingLeft="1dp"
                android:paddingRight="1dp"
                android:paddingTop="1dp"
                android:scaleY="30"
                android:visibility="visible" />

            <ProgressBar
                android:id="@+id/restProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:indeterminate="false"
                android:paddingBottom="1dp"
                android:paddingStart="5dp"
                android:paddingTop="1dp"
                android:scaleY="30"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:layout_weight="0"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/workoutProgressButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="0"
                android:text="@string/workout_progress" />

            <Button
                android:id="@+id/pauseBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="0"
                android:text="@string/pause" />
        </LinearLayout>


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
